# image-segmentation

./: .gitignore  README.md  requirements.txt  setup.cfg
config/: config.py
configs/: configs.py
notebooks/: sam_test.ipynb  stanford_EDA.ipynb
src/: engine.py  evaluate.py  loss.py
src/datagen/: augment.py  dataloader.py  datasets.py
src/models/: blocks.py  decoder.py  encoder.py  fcn.py  unet.py
src/tests/: test_data.py
