[metadata]
name = image-segmentation
version = 1.0.0
author = Quan
description = Prototyping Image Segmentation Models

[options]
python_requires = >=3.7, <4
install_requires =
    torch==1.13.1
    torchvision==0.14.1
    numpy==1.24.2
    
packages=find:

[options.extras_require]
train = 
    tqdm
test = 
    pytest==7.2.2
notebook =
    ipykernel==6.21.3